decoder/h264: don't assert on invalid parameter

Remove redundant checking on input parameters as well.

This avoids assertion failure in https://bugs.freedesktop.org/show_bug.cgi?id=94007,
but the upper library should check why are the invalid paramters passed to libva.

Signed-off-by: Xiang, Haihao <haihao.xiang@intel.com>
Reviewed-by: Sean V Kelley <seanvk@posteo.de>
(cherry picked from commit fb7d6f56ad3000734390279a55b5c7f54ed9e3a3)